<resources>
    <string name="app_name">SignUpForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="username_label">Username:</string>
    <string name="username_hint">Please enter your username</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="password_hint">Please enter your password</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_hint">Please confirm your password</string>
    <string name="vcs_test">VCS under control</string>


</resources>
